tidied up everything for PR